# stockpot

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  tokens.rs  version_check.rs
src/agents/: base.rs  executor.rs  json_agent.rs  manager.rs  mod.rs
src/agents/builtin/: explore.rs  mod.rs  planning.rs  reviewers.rs  stockpot.rs
src/agents/builtin/prompts/: code_reviewer.md  explore.md  planning.md  stockpot.md
src/agents/executor/: adapters.rs  mcp.rs  mod.rs  model_factory.rs  streaming.rs  sub_agents.rs  types.rs
src/auth/: chatgpt.rs  claude_code.rs  storage.rs
src/cli/: add_model.rs  bridge.rs  completion_reedline.rs  mod.rs  model_picker.rs  repl.rs  runner.rs  streaming_markdown.rs
src/cli/commands/: context.rs  core.rs  mcp.rs  session.rs
src/cli/completion_reedline/: completer.rs  prompt.rs
src/cli/repl/: commands.rs  mod.rs  prompt.rs
src/config/: mod.rs  settings.rs  xdg.rs
src/db/: migrations.rs  mod.rs  schema.rs  session_repository.rs
src/db/sql/: 002_models.sql  003_api_keys.sql
src/gui/: app.rs  image_processing.rs  mod.rs  pdf_processing.rs
src/gui/app/: agent_dropdown.rs  attachments.rs  error.rs  input.rs  messages.rs  model_dropdown.rs  scroll_animation.rs  settings.rs  streaming.rs  toolbar.rs
src/gui/app/settings/: tabs.rs
src/gui/app/settings/mcp_servers/: agent_assignments.rs  import_dialog.rs  import_section.rs  mod.rs  server_list.rs
src/gui/app/settings/models/: config_panel.rs  dialog.rs  mod.rs  provider_list.rs
src/gui/components/: attachment_preview.rs  collapsible.rs  mod.rs  scrollbar.rs  spinner.rs  throughput_chart.rs  tooltip.rs  zed_markdown.rs
src/gui/state/: conversation.rs  message.rs  mod.rs  sections.rs
src/mcp/: config.rs  manager.rs
src/messaging/: bus.rs  event_bridge.rs  mod.rs  renderer.rs  spinner.rs  types.rs
src/models/: config.rs  defaults.rs  mod.rs  registry.rs  settings.rs  utils.rs
src/session/: mod.rs
src/tools/: agent_tools.rs  common.rs  delete_file_tool.rs  diff.rs  edit_file_tool.rs  file_ops.rs  grep_tool.rs  mod.rs  registry.rs  shell.rs  shell_tool.rs
