[package]
name = "stockpot"
version = "0.13.0"
edition = "2021"
description = "AI-powered coding assistant with GUI, CLI, and TUI modes"
license = "MIT"
authors = ["Stockpot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "gui", "cli", "coding", "assistant", "llm"]
categories = ["command-line-utilities", "development-tools", "gui"]

[[bin]]
name = "spot"
path = "src/main.rs"

[dependencies]
# SerdesAI - AI agent framework (using local path for development)
serdes-ai = { path = "../serdesAI/serdes-ai", features = ["full"] }
serdes-ai-core = { path = "../serdesAI/serdes-ai-core" }
serdes-ai-agent = { path = "../serdesAI/serdes-ai-agent", features = ["tracing-integration"] }
serdes-ai-models = { path = "../serdesAI/serdes-ai-models", features = ["full", "chatgpt-oauth", "claude-code-oauth"] }
serdes-ai-providers = { path = "../serdesAI/serdes-ai-providers", features = ["full"] }
serdes-ai-tools = { path = "../serdesAI/serdes-ai-tools" }
serdes-ai-mcp = { path = "../serdesAI/serdes-ai-mcp" }

# Markdown rendering
streamdown-parser = { git = "https://github.com/fed-stew/streamdown-rs" }
streamdown-render = { git = "https://github.com/fed-stew/streamdown-rs" }
streamdown-config = { git = "https://github.com/fed-stew/streamdown-rs" }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
reedline = "0.37"
nu-ansi-term = "0.50"

# Terminal UI
crossterm = "0.28"
ratatui = "0.29"
syntect = "5.2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"

# Image processing is always available
# PDF processing (mupdf) is Unix-only due to build complexity on Windows

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
which = "6.0"
regex = "1.10"
glob = "0.3"
semver = "1.0"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"

# HTTP (for OAuth)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Base64 encoding/decoding (for JWT parsing)
base64 = "0.22"


# Browser
webbrowser = "1.0"

# Interactive terminal
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
shellexpand = "3.1"
terminal_size = "0.4"

# GUI (optional - for stockpot-gui binary)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", optional = true }
# Using vendored gpui-component fork with proper list rendering (upstream longbridge version has broken lists)
gpui-component = { git = "https://github.com/janfeddersen-wq/gpui-component", optional = true }
gpui-component-assets = { git = "https://github.com/janfeddersen-wq/gpui-component", optional = true }
rfd = { version = "0.14", optional = true }
unicode-segmentation = { version = "1.11", optional = true }

[target.'cfg(unix)'.dependencies]
pty-process = "0.4"
mupdf = { version = "0.5", default-features = false }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["gui"]
gui = ["dep:gpui", "dep:gpui-component", "dep:gpui-component-assets", "dep:rfd", "dep:unicode-segmentation"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
