[package]
name = "stockpot"
version = "0.19.1"
edition = "2021"
description = "AI-powered coding assistant with native GUI"
license = "MIT"
authors = ["Stockpot Contributors"]
repository = "https://github.com/fed-stew/stockpot"
keywords = ["ai", "gui", "coding", "assistant", "llm"]
categories = ["development-tools", "gui"]

[[bin]]
name = "spot"
path = "src/main.rs"

[dependencies]
# SerdesAI - AI agent framework
serdes-ai = { git = "https://github.com/janfeddersen-wq/serdesAI", features = ["full"] }
serdes-ai-core = { git = "https://github.com/janfeddersen-wq/serdesAI" }
serdes-ai-agent = { git = "https://github.com/janfeddersen-wq/serdesAI", features = ["tracing-integration"] }
serdes-ai-models = { git = "https://github.com/janfeddersen-wq/serdesAI", features = ["full", "chatgpt-oauth", "claude-code-oauth"] }
serdes-ai-providers = { git = "https://github.com/janfeddersen-wq/serdesAI", features = ["full"] }
serdes-ai-tools = { git = "https://github.com/janfeddersen-wq/serdesAI" }
serdes-ai-mcp = { git = "https://github.com/janfeddersen-wq/serdesAI" }

# Markdown rendering
streamdown-parser = { git = "https://github.com/fed-stew/streamdown-rs" }
streamdown-render = { git = "https://github.com/fed-stew/streamdown-rs" }
streamdown-config = { git = "https://github.com/fed-stew/streamdown-rs" }

# Core
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
nu-ansi-term = "0.50"
crossterm = "0.28"
syntect = "5.2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.25"

# Image processing is always available
# PDF processing (mupdf) is Unix-only due to build complexity on Windows

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
which = "6.0"
regex = "1.10"
glob = "0.3"
semver = "1.0"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"

# HTTP (for OAuth)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Base64 encoding/decoding (for JWT parsing)
base64 = "0.22"


# Browser
webbrowser = "1.0"

# Shell utilities
shellexpand = "3.1"

# GUI (optional - for stockpot-gui binary)
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", optional = true }
# Using vendored gpui-component fork with proper list rendering (upstream longbridge version has broken lists)
gpui-component = { git = "https://github.com/janfeddersen-wq/gpui-component", optional = true, features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/janfeddersen-wq/gpui-component", optional = true }
rfd = { version = "0.14", optional = true }
unicode-segmentation = { version = "1.11", optional = true }

[target.'cfg(unix)'.dependencies]
pty-process = "0.4"
mupdf = { version = "0.5", default-features = false }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3"

[features]
default = ["gui"]
gui = ["dep:gpui", "dep:gpui-component", "dep:gpui-component-assets", "dep:rfd", "dep:unicode-segmentation"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Pin zbus to avoid ashpd 0.12.0 compilation failure (zvariant_derive 5.9.0 breaking change)
# See: https://github.com/bilelmoussaoui/ashpd/issues/323
# Using zvariant-5.8.0 tag (before the breaking change)
[patch.crates-io]
zbus = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zvariant = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zvariant_derive = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zvariant_utils = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zbus_names = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
zbus_macros = { git = "https://github.com/dbus2/zbus", tag = "zvariant-5.8.0" }
